--- a/src/style/index.css
+++ b/src/style/index.css
@@ -27,8 +27,20 @@
   --heavy-shadow: 0 1px 8px 3px #00000078;
 
   transition: .8s all;
+
+  /* spacing */
+  letter-spacing: 2px;
 }
 
+#root {
+  height: 100vh;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 a {
   text-decoration: none;
   color: inherit;
@@ -52,4 +64,7 @@ input {
 ul,
 li {
   list-style: none;
+}
+header {
+  padding: calc(var(--main-padding) / 2) var(--main-padding);
 }
