fetch the data and fix issues

--- a/src/style/button.css
+++ b/src/style/button.css
@@ -4,13 +4,17 @@ input[type="button"],
 input[type="submit"] {
     border-radius: 8px;
     border: 1px solid transparent;
-    padding: .6em 1.5em;
+    padding: var(--button-padding);
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
     background-color: #1a1a1a;
     cursor: pointer;
     transition: border-color 0.25s;
+
+    &:hover {
+        background-color: #505050;
+    }
 }
 
 .icon {
