--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -1,3 +1,4 @@
+/* layout */
 .container {
     padding: 0 var(--main-padding);
     margin: auto;
@@ -11,7 +12,6 @@
     }
 }
 
-/* flex box */
 .box {
     display: flex;
     align-items: center;
@@ -20,6 +20,14 @@
     flex-wrap: wrap;
 }
 
+.paper {
+    padding: var(--main-padding);
+    box-shadow: var(--out-line), var(--light-shadow);
+    background-color: #fff;
+    color: black;
+}
+
+/* direction */
 .column {
     flex-direction: column;
 }
@@ -28,6 +36,7 @@
     flex-wrap: nowrap;
 }
 
+/* slignment */
 .jc-start {
     justify-content: flex-start;
 }
@@ -44,13 +53,12 @@
     align-items: center;
 }
 
-
 /* display */
 .hidden {
     display: none;
 }
 
-.hide-in-samall {
+.hide-in-small {
     display: none;
 
     @media (min-width: 768px) {
@@ -71,6 +79,9 @@
     text-align: left;
 }
 
+.text-center {
+    text-align: center;
+}
 /* Guitters */
 .disable-guitters {
     margin: 0;
@@ -86,8 +97,12 @@
     margin: 0;
 }
 
-.p-half {
-    padding: var(--main-padding) / 2;
+.half-p {
+    padding: calc(var(--main-padding) / 2);
+}
+
+.full-p {
+    padding: var(--main-padding);
 }
 
 /* dimensions */
