--- a/src/style/home.module.css
+++ b/src/style/home.module.css
@@ -37,6 +37,10 @@
                 font-weight: 100;
             }
         }
+
+        .actions {
+            width: 300px;
+        }
     }
 
     .folderContainer {}
