--- a/src/style/loader.css
+++ b/src/style/loader.css
@@ -5,6 +5,7 @@
     width: 100vw;
     height: 100vh;
     background-color: var(--black-color);
+    z-index: 1000;
 
     .loader {
         border: 4px solid rgba(255, 255, 255, 0.1);
