--- a/src/style/window.module.css
+++ b/src/style/window.module.css
@@ -1,10 +1,11 @@
 .overlay {
-    position: absolute;
+    position: fixed;
     height: 100vh;
     background-color: transparent;
     backdrop-filter: blur(2px);
     left: 0;
     top: 0;
+    z-index: 100;
 
     .body {
         width: 86%;
@@ -22,8 +23,32 @@
             position: absolute;
             right: 20px;
             width: 280px;
-            top: 10%;
+            top: 15%;
             color: white;
+
+            @media (min-width: 991px) {
+                top: 10%;
+            }
+        }
+    }
+
+    &.moreOptionsContainer {
+        @media (min-width: 768px) {
+            backdrop-filter: blur(0);
+        }
+
+        .moreOptions {
+            position: absolute;
+            right: 20px;
+            width: 280px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: white;
+
+            @media (min-width: 768px) {
+                top: 25%;
+                transform: translateY(0);
+            }
         }
     }
 
