--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -25,6 +25,7 @@
     box-shadow: var(--out-line), var(--light-shadow);
     background-color: #fff;
     color: black;
+    border-radius: 7px;
 }
 
 /* direction */
@@ -36,7 +37,7 @@
     flex-wrap: nowrap;
 }
 
-/* slignment */
+/* alignment */
 .jc-start {
     justify-content: flex-start;
 }
@@ -105,6 +106,13 @@
     padding: var(--main-padding);
 }
 
+.m-auto {
+    margin: auto;
+}
+
+.outline {
+    box-shadow: var(--out-line);
+}
 /* dimensions */
 .full-width {
     width: 100%;
@@ -123,4 +131,20 @@
 
 .shrink {
     flex-grow: 0;
+}
+
+/* colors */
+.error {
+    background-color: red;
+    position: relative;
+
+    .hideBtn {
+        position: absolute;
+        top: -15px;
+        right: -15px;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: red;
+    }
 }
